k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecs-combined
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: ecs-combined.local
      http:
        paths:
          - path: /top-urls
            pathType: Prefix
            backend:
              service:
                name: dashboard-service
                port:
                  number: 80
          - path: /summary
            pathType: Prefix
            backend:
              service:
                name: dashboard-service
                port:
                  number: 80
          - path: /hourly
            pathType: Prefix
            backend:
              service:
                name: dashboard-service
                port:
                  number: 80
          - path: /recent
            pathType: Prefix
            backend:
              service:
                name: dashboard-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
